tests/snapshots/tui_test__tui_completions.snap
---
source: tests/tui_test.rs
expression: terminal.backend().to_string()
---
"┌ Report ────────────────────────────────────────┐"
"│# Report                                        │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
"┌ Commands ──────────────────────────────────────┐"
"│Type /help for commands. Press Esc to quit.     │"
"│> /s                                            │"
"└────────────────────────────────────────────────┘"
