tests/snapshots/tui_test__tui_initial.snap
---
source: tests/tui_test.rs
expression: terminal.backend().to_string()
---
"┌ Report ────────────────────────────────────────┐"
"│# Report                                        │"
"│Line 1                                          │"
"│Line 2                                          │"
"│Line 3                                          │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
"┌ Commands ──────────────────────────────────────┐"
"│Type /help for commands. Press Esc to quit.     │"
"│>                                               │"
"└────────────────────────────────────────────────┘"
" Up/Dn scroll  PgUp/PgDn page  /command  Esc quit "
