tests/snapshots/tui_test__tui_search.snap
---
source: tests/tui_test.rs
expression: output
---
"┌ Report [searching: NEEDLE] ────────────────────┐"
"│# Report                                        │"
"│NEEDLE here                                     │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
"┌ Commands ──────────────────────────────────────┐"
"│Type /help for commands. Press Esc to quit.     │"
"│>                                               │"
"└────────────────────────────────────────────────┘"
" Esc clear search  PgUp/PgDn scroll  /search <quer"
